# metis

./: .gitignore  README.md  pyproject.toml
configs/: gumbel_batch_test.yaml  gumbel_vl_test.yaml  model.yaml  selfplay_profile.yaml  selfplay_v10.yaml  selfplay_v10_gumbel.yaml  selfplay_v11.yaml  selfplay_v8.yaml  selfplay_v9.yaml  training.yaml
scripts/: analyze_nca.py  bench_inference.py  diagnostic_eval.py  launch.sh  nca_dashboard.py  profile_run.py  run_selfplay.sh  train.sh
src/chess/: bitboard.py  board.py  evaluation.py  mcts.py  mcts_array.py  self_play.py
src/model/: transformer.py
src/monitoring/: geometric.py
src/nca/: generator.py
src/training/: muon.py  replay_buffer.py  sf_anchor.py  train.py
tests/: parity_perft.py  test_bitboard.py  test_gumbel.py  test_mcts.py  test_mcts_comparison.py  test_perspective.py
