[project]
name = "chess-engine"
version = "0.1.0"
description = "AlphaZero-style chess engine on the luxia-base transformer"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4.0",
    "python-chess>=1.10.0",
    "numpy",
    "wandb",
    "pyyaml",
]

[project.optional-dependencies]
training = [
    "flash-attn",
]
eval = [
    "matplotlib",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
